--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,8 @@
 			<ul class="contact">
 				<li class="contact__items">
 					<span class="contact__icon"><i class="icon-phone"></i></span>
-					<p>(912) 555-1234 <br>
-						(912) 555-5678</p>
+					(912) 555-1234 <br>
+						(912) 555-5678
 				</li>
 				<li class="contact__items">
 					<span class="contact__icon"><i class="icon-location"></i></span>
@@ -180,64 +180,65 @@
 			<li>Business</li>
 			<li>Other</li>
 		</ul>
-		<ul class="tab-content">
-			<li class="active">
-				<div class="content-wrapper">
+		<div class="tab-content">
+			<div class="active">
+				<ul class="content-wrapper">
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/skewed">
 							<img src="img/portfolio/skewed.jpg" alt="skewed_disign" target="new_blank">
 						</a>
 						<h3 class="tab-content__title">Skewed Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/skewed/">http://dedn.github.io/skewed/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/cosablanca">
 							<img src="img/portfolio/cosablanca.jpg" alt="cosablanca" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Cosablanca</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/cosablanca/">http://dedn.github.io/cosablanca/</a> Link to my repository.
                      Completed layout pages on the site, realized adaptability. Used many examples of animation.</span>
-					</article>
+					</li>
 
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/panakeia">
 							<img src="img/portfolio/panakeia.jpg" alt="panakeia" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Panakeia</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/panakeia/">http://dedn.github.io/panakeia/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/strict">
 							<img src="img/portfolio/strict.jpg" alt="strict" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Strict Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/strict/">http://dedn.github.io/strict/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/project">
 							<img src="img/portfolio/project.jpg" alt="strict" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Business Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/project/">http://dedn.github.io/project/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io//bandi/">
 							<img src="img/portfolio/brandi.jpg" alt="strict" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Brandi</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io//bandi/">http://dedn.github.io//bandi/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-
-				</div>
-			</li>
-			<li>
-				<div class="content-wrapper">
-					<article class="tab-content__item clearfix">
+					</li>
+				</ul>
+			</div>
+			<div>
+				<ul class="content-wrapper">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/portfolio">
 							<img src="img/portfolio/portfolio.jpg" alt="portfolio" target="_blank">
 						</a>
@@ -245,105 +246,110 @@
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/portfolio/">http://dedn.github.io/portfolio/</a>
 							Link to site. Completed layout pages on the site, realized adaptability. integrated on WordPress</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://progsk.ru/">
 							<img src="img/portfolio/gsk.jpg" alt="GSK" target="_blank">
 						</a>
 						<h3 class="tab-content__title">GSK</h3>
 						<span class="tab-content__descr"><a href="http://progsk.ru/">http://progsk.ru/</a>
 							Link to site. Completed layout pages on the site, realized adaptability</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/cloud">
 							<img src="img/portfolio/cloud.jpg" alt="cloud" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Cloud Shoes</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/cloud/">http://dedn.github.io/cloud/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/morbi">
 							<img src="img/portfolio/morbi.jpg" alt="morbi" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Morbi</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/morbi/">http://dedn.github.io/morbi/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/morbi">
 							<img src="img/portfolio/mache.jpg" alt="mache" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Mache</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/mache/">http://dedn.github.io/mache/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/business">
 							<img src="img/portfolio/busines.jpg" alt="business" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Business</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/business/">http://dedn.github.io/business/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-				</div>
-			</li>
-			<li>
-				<div class="content-wrapper">
-					<article class="tab-content__item clearfix">
+				</ul>
+			</div>
+			<div>
+				<ul class="content-wrapper">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/dark">
 							<img src="img/portfolio/dark.jpg" alt="dark_games" target="_blank">
 						</a>
 						<h3 class="tab-content__title">DarkGames</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/dark/">http://dedn.github.io/dark/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/toronto">
 							<img src="img/portfolio/toronto.jpg" alt="toronto" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Toronto</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/toronto/">http://dedn.github.io/toronto/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
+					</li>
 
-					<article class="tab-content__item clearfix">
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/natgeo">
 							<img src="img/portfolio/national.jpg" alt="national" target="_blank">
 						</a>
 						<h3 class="tab-content__title">NatGeo</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/natgeo/">http://dedn.github.io/natgeo/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/skokov/blog-active">
 							<img src="img/portfolio/skokov.jpg" alt="skokov" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Skokov</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/skokov/blog-active"> http://dedn.github.io/skokov/blog-active</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/quora">
 							<img src="img/portfolio/quora.jpg" alt="skokov" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Quora</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/quora"> http://dedn.github.io/quora</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-					<article class="tab-content__item clearfix">
+					</li>
+
+					<li class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/singular">
 							<img src="img/portfolio/singular.jpg" alt="singular" target="_blank">
 						</a>
 						<h3 class="tab-content__title">Singular</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/singular"> http://dedn.github.io/singular</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
-					</article>
-				</div>
-			</li>
-		</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
 	</section>
 	<aside class="right-bar">
 		<article class="mev-company">
